Time: 3 ms (56.22%), Space: 44.6 MB (99.21%) - LeetHub